[gd_scene load_steps=3 format=3 uid="uid://8ebqyf01b32c"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_wgtob"]
[ext_resource type="FontFile" uid="uid://dmsqslo6uor21" path="res://assets/fonts/BloodlettingLegacy.ttf" id="2_w2hrt"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_wgtob")

[node name="Dimmer" type="ColorRect" parent="."]
z_index = -1
offset_left = -66.0
offset_top = -67.0
offset_right = 1344.0
offset_bottom = 782.0
color = Color(0, 0, 0, 0.643137)

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 100.0
offset_right = 136.0
offset_bottom = 226.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w2hrt")
theme_override_font_sizes/font_size = 80
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -18.0
offset_right = 43.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="QuitButton" type="Button" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 34.0
offset_right = 43.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Quit
"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
